--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -288,10 +288,178 @@ nav .tutorials {
 #reference-li .references {
 	background:#F4F4F4;
 	width:100vw;
-	height:100vh;
+	color:#000;
+	min-height:500px;
 	position:absolute;
 	top:55px;
 	left:0;
+	text-transform:capitalize;
+	display:flex;
+	flex-wrap:wrap;
+	animation-name:reference-anim;
+	animation-duration:0.5s;
+	display:none;
 }
 
+@keyframes reference-anim {
+	from {
+		opacity:0;
+	}
+	to {
+		opacity:1;
+	}
+}
+
+.references #ref-html {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+}
+
+.references #Javascript-reference {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+}
+
+.references #css-reference {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+}
+
+
+.references #programming-reference {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+	text-transform:capitalize;
+}
+
+
+.references #server-side-reference {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+	text-transform:capitalize;
+}
+
+
+.references #xml-reference {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+}
+
+
+.references #character {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+	margin-bottom:50px;
+}
+.references h3 {
+	font-size:17px;
+	font-weight:300;
+	margin:10px 0;
+}
+
+.references h1 {
+	font-weight:400;
+}
+
+#reference-li:hover .references {
+	display:flex;
+}
+
+.close {
+	position:absolute;
+	top:15px;
+	right:15px;
+	color:#000;
+}
 /* reference content */
+.fa-yin-yang , .fa-globe-africa ,.fa-search {
+	font-size:20px;
+}
+
+/* Examples */
+.examples {
+	position:absolute;
+	background:#F8F8F8;
+	color:#000;
+	width:100vw;
+	min-height:500px;
+	left:0;
+	right:0;
+	top:55px;
+	display:flex;
+	animation-name:examples;
+	animation-duration:0.8s;
+	flex-wrap:wrap;
+	text-transform:capitalize;
+	display:none;
+}
+
+@keyframes examples {
+	from {
+		opacity:0;
+	}
+	to {
+		opacity:1;
+	}
+}
+
+.examples #HTML-and-CSS {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+}
+
+.examples #Javascript-examples {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+}
+
+.examples #Quizzes {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+	order:2;
+	margin-bottom:50px;
+}
+
+.examples #Programming-examples {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+}
+
+.examples #server-side-examples {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+	order:1;
+}
+
+.examples #xml-examples {
+	width:40%;
+	margin-left:30px;
+	margin-top:40px;
+}
+
+.examples h3 {
+	font-size:17px;
+	font-weight:300;
+	margin:10px 0;
+}
+
+.examples h1 {
+	font-weight:400;
+}
+
+#examples-hr:hover .examples {
+	display:flex;
+}
+/*     */
