--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -11,13 +11,31 @@
 }
 
 .side > h3 {
-	font-weight:400;
 	padding:20px 0 20px 15px;
+	color:#555555;
 	font-family: 'Montserrat', sans-serif;
 }
 
 .side > h4 {
-	font-weight:400;
+	font-weight:450;
 	padding:4px 0 4px 15px;
 	font-family: 'Montserrat', sans-serif;
 }
+
+/* Right Side */
+main {
+	display:flex;
+}
+
+@media (max-width:750px) {
+	.side-bar {
+		display:none;
+	}
+}
+
+.right_side {
+	width:100%;
+	margin-left:10px;
+}
+
+
