--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,7 @@
 * {
 	margin:0;
 	padding:0;
+	box-sizing:border-box;
 }
 
 .side-bar {
@@ -8,6 +9,7 @@
 	min-height:100vh;
 	margin-bottom:-2px;
 	box-shadow:0.1px 0.1px 10px #787878;
+	/* margin-right:15px; */
 }
 
 .side > h3 {
@@ -17,9 +19,9 @@
 }
 
 .side > h4 {
-	font-weight:450;
+	font-weight:400;
 	padding:4px 0 4px 15px;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Robot', sans-serif;
 }
 
 /* Right Side */
@@ -34,8 +36,55 @@ main {
 }
 
 .right_side {
-	width:100%;
-	margin-left:10px;
+	width:100vw;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
 }
 
+.right__1 {
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+}
 
+.right__1 > h1 {
+	font-weight:500;
+	color:#555;
+	letter-spacing:0.6px;
+	font-size:50px;
+	font-family: 'Open Sans', sans-serif;
+	margin-top:25px;
+}
+
+.right__1 > p {
+	margin:20px 0 25px 0;
+	font-family: 'Open Sans', sans-serif;
+}
+
+.right__1 .btn button {
+	background:#555;
+	color:#FFF;
+	border:none;
+	outline:none;
+	padding:10px 10px;
+	letter-spacing:0.8px;
+}
+
+/* Top Box */
+.top-box-1 {
+	background:#F5F5F5;
+	width:90%;
+	height:400px;
+	margin-top:50px;
+	box-shadow:1px 1px 7px #787878;
+	opacity:0.8
+	
+}
+
+.top-box-1 > h1 {
+	margin:30px 0 20px 15px;
+	font-weight:400;
+	font-size:25px;
+	font-family: 'Robot', sans-serif;
+}
