--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,4 @@
+
 * {
 	margin:0;
 	padding:0;
@@ -76,7 +77,7 @@ main {
 .top-box-1 {
 	background:#F3F3F3;
 	width:90%;
-	height:390px;
+	height:410px;
 	margin-top:50px;
 	box-shadow:1px 1px 7px #787878;
 	
@@ -98,7 +99,7 @@ main {
 
 .top-box-1 .inside-compile {
 	width:90%;
-	height:230px;
+	height:250px;
 	border-left:3px solid #00B53E;
 	background:#FFF;
 	padding:10px 10px;
@@ -135,7 +136,7 @@ main {
 	width:100%;
 	background:#F3F3F3;
 	margin:40px 0 0 0;
-	height:800px;
+	height:730px;
 	z-index:-1;
 }
 
@@ -185,10 +186,23 @@ main {
 
 .right__2 .inside-compile {
 	width:94%;
-	height:350px;
+	height:310px;
 	border-left:3px solid #00B53E;
 	background:#FFF;
 	padding:10px 10px;
 	margin:15px 0 0 0;
 }
  
+ 
+/*  CSS */
+
+.compile .inside-compile {
+	display:flex;
+	flex-direction:column;
+	justify-content:space-between;
+}
+
+code {
+	font-family: 'Montserrat', sans-serif;
+	font-size:13px;
+}
