--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -330,3 +330,41 @@ pre {
 	margin:15px 0 0 25px;
 	box-shadow:1px 1px 5px #787878;
 }
+
+/* sprt */
+.section {
+	background-color:#555;
+	width:100%;
+	z-index:-3;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+}
+
+.section .py-section {
+	background:#FFF;
+	width:95%;
+	height:200px;
+	margin:50px 0;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+}
+
+.section .py-section h1 {
+	font-size:25px;
+	font-weight:400;
+	margin:17px 0 13px 0;
+}
+
+.section .py-section p {
+	margin:0 0 30px 0;
+}
+
+.section .py-section button {
+	padding:9px 15px;
+	color:#Fff;
+	background:#555;
+	border:none;
+	margin-top:14px;
+}
